--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,12 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
+    { "handle": "filesystem" },
+    { "src": "/V7_studio.html", "dest": "/public/V7_studio.html" },
     { "src": "/save-phone-number", "dest": "/api/server.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/(.*)", "status": 404, "dest": "/404.html" }
   ]
 }
