--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "v7",
+  "name": "v7-studio",
   "version": "1.0.0",
-  "description": "",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0"
   }
 }
+
