--- a/mongo.env
+++ b/mongo.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://marshbp:marsh-bp@cluster0.mb5wosf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://v7studiophoto:<password>@cluster0.fr3oata.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
